// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOwnersRoles should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "hubspot_role:541452 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "541452",
            "name": "Test Role",
            "requiresBillingWrite": false,
          },
        },
      ],
      "_type": "hubspot_role",
      "createdOn": undefined,
      "displayName": "Test Role",
      "id": "541452",
      "name": "Test Role",
      "requiresBillingWrite": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:317862822 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-01-27T18:15:26.472Z,
            "email": "ronald.arias@contractor.jupiterone.com",
            "firstName": "Ronald",
            "id": "317862822",
            "lastName": "Arias",
            "updatedAt": 2023-02-15T17:11:09.475Z,
            "userId": 49422897,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1674843326472,
      "displayName": "Ronald Arias",
      "email": "ronald.arias@contractor.jupiterone.com",
      "firstName": "Ronald",
      "id": "317862822",
      "lastName": "Arias",
      "name": "Ronald Arias",
      "updatedOn": 1676481069475,
      "userId": 49422897,
      "username": "ronald.arias@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328396076 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:56:56.063Z,
            "email": "ronald.arias+2@contractor.jupiterone.com",
            "firstName": "",
            "id": "328396076",
            "lastName": "",
            "updatedAt": 2023-02-09T18:56:56.063Z,
            "userId": 49684023,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675969016063,
      "displayName": "ronald.arias+2@contractor.jupiterone.com",
      "email": "ronald.arias+2@contractor.jupiterone.com",
      "firstName": "",
      "id": "328396076",
      "lastName": "",
      "name": "ronald.arias+2@contractor.jupiterone.com",
      "updatedOn": 1675969016063,
      "userId": 49684023,
      "username": "ronald.arias+2@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328396086 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:57:10.244Z,
            "email": "ronald.arias+3@contractor.jupiterone.com",
            "firstName": "",
            "id": "328396086",
            "lastName": "",
            "updatedAt": 2023-02-09T18:57:10.244Z,
            "userId": 49684027,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675969030244,
      "displayName": "ronald.arias+3@contractor.jupiterone.com",
      "email": "ronald.arias+3@contractor.jupiterone.com",
      "firstName": "",
      "id": "328396086",
      "lastName": "",
      "name": "ronald.arias+3@contractor.jupiterone.com",
      "updatedOn": 1675969030244,
      "userId": 49684027,
      "username": "ronald.arias+3@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328401281 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:56:10.803Z,
            "email": "ronald.arias+1@contractor.jupiterone.com",
            "firstName": "",
            "id": "328401281",
            "lastName": "",
            "updatedAt": 2023-02-09T18:56:10.803Z,
            "userId": 49684006,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675968970803,
      "displayName": "ronald.arias+1@contractor.jupiterone.com",
      "email": "ronald.arias+1@contractor.jupiterone.com",
      "firstName": "",
      "id": "328401281",
      "lastName": "",
      "name": "ronald.arias+1@contractor.jupiterone.com",
      "updatedOn": 1675968970803,
      "userId": 49684006,
      "username": "ronald.arias+1@contractor.jupiterone.com",
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "hubspot_role",
    "hubspot_user",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 0,
}
`;

exports[`#fetchOwners should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "hubspot_account:1401879 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "apiBaseUrl": "https://api.hubapi.com",
            "appId": "1401879",
          },
        },
      ],
      "_type": "hubspot_account",
      "accessUrl": "https://api.hubapi.com",
      "createdOn": undefined,
      "displayName": "1401879",
      "name": "1401879",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:317862822 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-01-27T18:15:26.472Z,
            "email": "ronald.arias@contractor.jupiterone.com",
            "firstName": "Ronald",
            "id": "317862822",
            "lastName": "Arias",
            "updatedAt": 2023-02-15T17:11:09.475Z,
            "userId": 49422897,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1674843326472,
      "displayName": "Ronald Arias",
      "email": "ronald.arias@contractor.jupiterone.com",
      "firstName": "Ronald",
      "id": "317862822",
      "lastName": "Arias",
      "name": "Ronald Arias",
      "updatedOn": 1676481069475,
      "userId": 49422897,
      "username": "ronald.arias@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328396076 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:56:56.063Z,
            "email": "ronald.arias+2@contractor.jupiterone.com",
            "firstName": "",
            "id": "328396076",
            "lastName": "",
            "updatedAt": 2023-02-09T18:56:56.063Z,
            "userId": 49684023,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675969016063,
      "displayName": "ronald.arias+2@contractor.jupiterone.com",
      "email": "ronald.arias+2@contractor.jupiterone.com",
      "firstName": "",
      "id": "328396076",
      "lastName": "",
      "name": "ronald.arias+2@contractor.jupiterone.com",
      "updatedOn": 1675969016063,
      "userId": 49684023,
      "username": "ronald.arias+2@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328396086 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:57:10.244Z,
            "email": "ronald.arias+3@contractor.jupiterone.com",
            "firstName": "",
            "id": "328396086",
            "lastName": "",
            "updatedAt": 2023-02-09T18:57:10.244Z,
            "userId": 49684027,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675969030244,
      "displayName": "ronald.arias+3@contractor.jupiterone.com",
      "email": "ronald.arias+3@contractor.jupiterone.com",
      "firstName": "",
      "id": "328396086",
      "lastName": "",
      "name": "ronald.arias+3@contractor.jupiterone.com",
      "updatedOn": 1675969030244,
      "userId": 49684027,
      "username": "ronald.arias+3@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:328401281 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2023-02-09T18:56:10.803Z,
            "email": "ronald.arias+1@contractor.jupiterone.com",
            "firstName": "",
            "id": "328401281",
            "lastName": "",
            "updatedAt": 2023-02-09T18:56:10.803Z,
            "userId": 49684006,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1675968970803,
      "displayName": "ronald.arias+1@contractor.jupiterone.com",
      "email": "ronald.arias+1@contractor.jupiterone.com",
      "firstName": "",
      "id": "328401281",
      "lastName": "",
      "name": "ronald.arias+1@contractor.jupiterone.com",
      "updatedOn": 1675968970803,
      "userId": 49684006,
      "username": "ronald.arias+1@contractor.jupiterone.com",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:1401879 ",
      "_key": "hubspot_account:1401879 |has|hubspot_user:317862822 ",
      "_toEntityKey": "hubspot_user:317862822 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:1401879 ",
      "_key": "hubspot_account:1401879 |has|hubspot_user:328396076 ",
      "_toEntityKey": "hubspot_user:328396076 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:1401879 ",
      "_key": "hubspot_account:1401879 |has|hubspot_user:328396086 ",
      "_toEntityKey": "hubspot_user:328396086 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:1401879 ",
      "_key": "hubspot_account:1401879 |has|hubspot_user:328401281 ",
      "_toEntityKey": "hubspot_user:328401281 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "hubspot_account",
    "hubspot_user",
    "hubspot_account_has_user",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 4,
}
`;
